Refactor game state management and add new messaging types for lobby and gameplay updates